--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#a79c8e"
 footer-col: "#000000"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#000000"
