--- a/_config.yml
+++ b/_config.yml
@@ -93,21 +93,21 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#000000"
+navbar-col: "#404040"
 navbar-text-col: "#FFFFFF"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#404040"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#a79c8e"
-footer-col: "#000000"
+footer-col: "#404040"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#000000"
+footer-link-col: "#FFFFFF"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-#navbar-img: "/assets/img/bgimage.png"
+#navbar-img: "/assets/img/sky.jpg"
 #footer-img: "/assets/img/bgimage.png"
 page-img: "/assets/img/ivory.jpg"
 
