--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ link-col: "#008AFF"
 hover-col: "#a79c8e"
 footer-col: "#404040"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#FFFFFF"
+footer-link-col: "#000000"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
