--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ footer-link-col: "#000000"
 
 #navbar-img: "/assets/img/sky.jpg"
 #footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/ivory.jpg"
+page-img: "/assets/img/whitebg.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
