--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "YOUSOEP.com"
+url-pretty: "youseop.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -93,16 +93,16 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#404040"
+navbar-col: "#000000"
 navbar-text-col: "#FFFFFF"
-navbar-border-col: "#404040"
+navbar-border-col: "#000000"
 page-col: "#FFFFFF"
-text-col: "#404040"
+text-col: "#000000"
 link-col: "#008AFF"
 hover-col: "#a79c8e"
-footer-col: "#404040"
+footer-col: "#000000"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#000000"
+footer-link-col: "#FFFFFF"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
