--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ footer-link-col: "#BDBDBD"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/sunbg.jpg"
-footer-img: "/assets/img/sunbg.jpg"
+navbar-img: "/assets/img/sunbg.JPG"
+footer-img: "/assets/img/sunbg.JPG"
 page-img: "/assets/img/whitebg.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
