--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Name of website
 title: Step by step
-url: https://youseop.github.io
+url: https://youseop.github.io/
 # Your name to show in the footer
 author: Step by step
 
