--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: Step by step
+rss-description: 백준 BAEKJOON
 
 # --- General options --- #
 
