--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: Step by step
+title: B-side
 url: https://youseop.github.io/
 # Your name to show in the footer
-author: Step by step
+author: B-side
 
 # --- List of links in the navigation bar --- #
 
