--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: B-side
+title: Step by Step
 url: https://youseop.github.io/
 # Your name to show in the footer
-author: B-side
+author: Step by Step
 
 # --- List of links in the navigation bar --- #
 
